Modules/Network/security_groups.tf
resource "aws_security_group" "sg_lb_Front" {
  name        = "sg_lb_Front"
  description = "load balancer sg"
  vpc_id      = "${data.aws_vpc.OV_VPC.id}"

  ingress {
    # TLS (change to whatever ports you need)
    from_port = 3030
    to_port   = 3030
    protocol  = "tcp"

    # Please restrict your ingress to only necessary IPs and ports.
    # Opening to 0.0.0.0/0 can lead to security vulnerabilities.
    cidr_blocks = ["0.0.0.0/0"] # add a CIDR block here
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
